<resources>
    <string name="app_name">Conway\'s Life</string>
    <string name="maps_title">Maps</string>
    <string name="create_map">Create</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="name">Name</string>
    <string name="map_name_hint">Map name</string>
    <string name="delete_map">Delete map</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="date_created">Created</string>
    <string name="start_sim">Start</string>
    <string name="step_sim">Step</string>
    <string name="stop_sim">Stop</string>
    <string name="edit_map">Edit</string>
    <string name="delete">Delete</string>
</resources>
